syntax = "proto3";

package file;

option go_package = "./pb";


message CountJobReq{
  int32 level = 1;
  int32 year = 2;
  int32 month = 3;
  int32 set = 4;
}

message CountJobResp{
  int32 status_code = 1;
  string status_msg = 2;
  string job_name = 3;
}

message JoinDataReq{
  int32 level = 1;
  int32 year = 2;
  int32 month = 3;
  int32 set = 4;
}

message JoinDataResp{
  int32 status_code = 1;
  string status_msg = 2;
}

message ViewJobsReq{
  string id = 1;
}

message Jobs{
  string  id = 1;
  string name = 2;
  string status = 3;
  string final_status = 4;
  int32 progress = 5;
  string tracking_url = 6;
  string started_time = 7;
  string launch_time = 8;
  string finished_time = 9;
  string elapsed_time = 10;

}

message ViewJobsResp{
  int32 status_code = 1;
  string status_msg = 2;
  repeated Jobs Jobs = 3;
}


message CollectJobReq{
  int32 begin=1;
  int32 end=2;
  int32 level=3;
  int32 Except=4;
}

message CollectJobResp{
  int32 status_code = 1;
  string status_msg = 2;
  string job_name = 3;
}

message ViewWordReq{
  int32 level=1;
  int32 begin=2;
  int32 end=3;
  int32 count=4;
  int32 except=5;
}

message Words{
  string word=1;
  int64 count=2;
}

message ViewWordResp{
  int32 status_code = 1;
  string status_msg = 2;
  repeated Words Words=3;
}

service job {
  rpc CountJob(CountJobReq)returns(CountJobResp);
  rpc JoinData(JoinDataReq)returns(JoinDataResp);
  rpc ViewJobs(ViewJobsReq)returns(ViewJobsResp);
  rpc CollectJob(CollectJobReq)returns(CollectJobResp);
  rpc ViewWord(ViewWordReq)returns(ViewWordResp);
}